fixed routes & tailwind config

--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 :root {
-  --primary-color: #7C6A46;
+  --primary-color: #b45050;
   --secondary-color: #2C3E50;
   --background-color: #F9F7F4;
   --text-color: #333333;
