--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,5 +3,5 @@
     <app-featured-collections></app-featured-collections>
     <app-trending-products></app-trending-products>
     <app-customer-reviews></app-customer-reviews>
-    <app-newsletter></app-newsletter>
+    <!-- <app-newsletter></app-newsletter> -->
 </main>
