--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -122,9 +122,9 @@
                  [alt]="product.name"
                  class="w-full h-64 object-cover"/>
             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
-              <button class="btn-primary mx-2">Quick View</button>
-              <button class="text-white">
-                <i class="fas fa-heart text-2xl"></i>
+              <button [routerLink]="['/product', product.id]" class="btn-primary mx-2">Quick View</button>
+              <button (click)="toggleWishlist(product)" class="text-white">
+                <i class="fas" [class.fa-heart]="isInWishlist(product.id)" [class.fa-heart-o]="!isInWishlist(product.id)" [class.text-red-500]="isInWishlist(product.id)" [class.text-white]="!isInWishlist(product.id)"></i>
               </button>
             </div>
           </div>
@@ -145,7 +145,8 @@
               Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
             <button *ngIf="viewMode === 'list'"
-                    class="btn-primary" (click)="addToCart(product)">
+                    (click)="addToCart(product)"
+                    class="btn-primary">
               Add to Cart
             </button>
           </div>
@@ -154,4 +155,3 @@
     </div>
   </div>
 </main>
-
