--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -16,10 +16,11 @@
            class="fas fa-star text-sm"
            [class.text-gray-300]="star > product.rating"></i>
       </div>
-      <span class="text-sm text-gray-500 ml-2">({{product.reviews}})</span>
+      <!-- <span class="text-sm text-gray-500 ml-2">({{product.reviews}})</span> -->
+       <span class="text-sm text-gray-500 ml-2">(69)</span>
     </div>
     <div class="flex justify-between items-center">
-      <p class="text-primary font-bold">${{product.price}}</p>
+      <p class="text-primary font-bold">₹{{product.price}}</p>
       <button (click)="addToCart(product)" class="text-gray-700 hover:text-primary">
         <i class="fas fa-shopping-cart"></i>
       </button>
