--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -118,7 +118,7 @@
           <div [class]="viewMode === 'grid' ? 
                        'relative overflow-hidden' :
                        'relative overflow-hidden w-48'">
-            <img [src]="product.images[0]" 
+            <img [src]="product.general_images[0]?.image_link" 
                  [alt]="product.name"
                  class="w-full h-64 object-cover"/>
             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
