--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -24,10 +24,10 @@
           class="w-20 h-20 object-cover rounded"/>
      
      <div class="flex-1">
-       <h3 class="font-semibold">{{item.name}}</h3>
+       <a class="font-semibold" [routerLink]="['/product', item.id]">{{item.name}}</a>
        <p class="text-sm text-gray-600 mb-2">
-         <span *ngIf="item.color">Color: {{item.color}}</span>
-         <span *ngIf="item.size">, Size: {{item.size}}</span>
+         <!-- <span *ngIf="item.color">Color: {{item.color}}</span> -->
+         <span *ngIf="item.size">Size: {{item.size.size}}</span>
        </p>
        <div class="flex justify-between items-center">
          <div class="flex items-center gap-2">
@@ -50,7 +50,7 @@
      </div>
      
      <div class="text-right">
-       <p class="font-semibold">${{item.price * item.quantity | number:'1.2-2'}}</p>
+       <p class="font-semibold">₹{{item.price * item.quantity | number:'1.2-2'}}</p>
      </div>
    </div>
  </ng-container>
@@ -60,7 +60,7 @@
 <div class="p-4 border-t">
  <div class="flex justify-between mb-4">
    <span class="font-semibold">Subtotal:</span>
-   <span class="font-bold">${{cartTotal$ | async | number:'1.2-2'}}</span>
+   <span class="font-bold">₹{{cartTotal$ | async | number:'1.2-2'}}</span>
  </div>
  <button routerLink="/checkout" 
          (click)="close()"
