--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -206,11 +206,11 @@
         <div class="space-y-4 mb-6">
           <div *ngFor="let item of cartItems$ | async" 
                class="flex gap-4">
-            <img [src]="item.image" 
-                 [alt]="item.name"
+            <img [src]="item.mainImageLink.imageLink" 
+                 [alt]="item.mainImageLink.imageName"
                  class="w-16 h-16 object-cover rounded"/>
             <div class="flex-1">
-              <h3 class="font-medium">{{item.name}}</h3>
+              <h3 class="font-medium">{{item.productName}}</h3>
               <p class="text-sm text-gray-600">
                 Qty: {{item.quantity}}
                 <!-- <span *ngIf="item.color">, Color: {{item.color}}</span> -->
