--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div  class="product-card group">
   <div class="relative overflow-hidden">
-    <img [src]="product.main_image_link?.image_link" [alt]="product.name" class="w-full h-64 object-cover"/>
+    <img [src]="product.mainImageLink?.imageLink" [alt]="product.name" class="w-full h-64 object-cover"/>
     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
       <button [routerLink]="['/product', product.id]" class="btn-primary mx-2">Quick View</button>
       <button (click)="toggleWishlist(product)" class="text-white">
@@ -13,9 +13,10 @@
     <h6 class="text-sm mb-2 italic">{{product.category.name}}</h6>
     <div class="flex items-center mb-2">
       <div class="flex text-yellow-400">
-        <i *ngFor="let star of [1,2,3,4,5]" 
+       <!-- RATING IS COMMENTED OUT AS OF NOW -->
+        <!-- <i *ngFor="let star of [1,2,3,4,5]" 
            class="fas fa-star text-sm"
-           [class.text-gray-300]="star > product.rating"></i>
+           [class.text-gray-300]="star > product.rating"></i> -->
       </div>
       <!-- <span class="text-sm text-gray-500 ml-2">({{product.reviews}})</span> -->
        <span class="text-sm text-gray-500 ml-2">(69)</span>
