--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -56,7 +56,7 @@
                 <a routerLink="/login" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                   <i class="fas fa-sign-in-alt mr-2"></i>Login
                 </a>
-                <a routerLink="/auth/register" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
+                <a routerLink="/register" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                   <i class="fas fa-user-plus mr-2"></i>Register
                 </a>
               </ng-template>
