--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,14 +10,7 @@
         <!-- Search Bar -->
         <div class="hidden md:block flex-1 max-w-xl mx-8">
           <div class="relative">
-            <input
-              type="text"
-              placeholder="Search products..."
-              class="w-full px-4 py-2 rounded-full border focus:outline-none focus:border-primary"
-            />
-            <button class="absolute right-3 top-2">
-              <i class="fas fa-search text-gray-400"></i>
-            </button>
+            <app-navbar-search></app-navbar-search>
           </div>
         </div>
 
