--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -174,7 +174,7 @@
     <ng-template #loginPrompt>
       <div class="bg-gray-50 p-6 rounded-lg text-center mb-8">
         <p class="text-gray-600 mb-4">Please log in to write a review</p>
-        <button class="btn-primary">Log In</button>
+        <button class="btn-primary" routerLink="/login">Log In</button>
       </div>
     </ng-template>
 
